Remove redundant methods and other warnings.